; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_sqlite3_omit.c_sqlite3_column_text16.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_sqlite3_omit.c_sqlite3_column_text16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @sqlite3_column_text16(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @columnMem(i32* %6, i32 %7)
  %9 = call i8* @sqlite3_value_text16(i32 %8)
  store i8* %9, i8** %5, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @columnMallocFailure(i32* %10)
  %12 = load i8*, i8** %5, align 8
  ret i8* %12
}

declare dso_local i8* @sqlite3_value_text16(i32) #1

declare dso_local i32 @columnMem(i32*, i32) #1

declare dso_local i32 @columnMallocFailure(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
